# ESL-PSC

./: .gitignore  AGENTS.MD  README.md  deletion_canceler.py  demo_config_for_gui.json  echo_top_genes_for_sliding_enrichments  esl_auto_pairs.py  esl_integrator.py  esl_multimatrix.py  esl_psc_functions.py  gui_config.json  photo_species_phenotypes.txt  predict_from_saved_models.py  pytest.ini  requirements-gui.txt  requirements-toolkit.txt  ruff.toml  site_counter.py  slep_opts.txt  slep_opts_dec.txt  sps_density.py
additional_code/: README.md  TAAS_method.py  asr_convergence_checker.py  busted_parallel_run.py  ccs_method.py  csubst_sim_parallel_run.py  esl_multi_trait_parallel_run.py  esl_parallel_run.py  random_convergent_pairs.py  requirements.txt  run_busted_on_many_alignments.py  run_ccs_parallel.py  run_conv_sim_grid.py  run_esl_psc_on_cluster.py  run_many_csubst_simulations_one_input.py  run_multi_trait_ccs_parallel.py  run_multi_trait_esl_on_cluster.py  run_parallel_csubst_analyze.py  run_random_species_sims.py  sim_preprocess_for_esl_benchmarks.py  summarize_conv_benchmark_data.py  summarize_conv_multi_trait_benchmark_data.py
demo_data/: README.md
docs/: README.md  gui-quickstart.md
esl_psc_cli/: auto_pairs.py  (+10 more)
esl_psc_rs/: Cargo.toml  README.md
esl_psc_rs/scripts/: benchmark_multimatrix_vs_python.py  check_cli_parity.py  compare_with_python.py
esl_psc_rs/src/: main.rs
esl_unified_rs/: Cargo.toml  README.md
esl_unified_rs/scripts/: benchmark_multimatrix_vs_python.py  check_cli_parity.py  compare_with_python.py
esl_unified_rs/src/: main.rs
(+195 files in other folders)
