[package]
name = "esl-psc"
version = "2.5.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rayon = "1.10"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
site_counter_rs = { path = "../site_counter_rs" }
